<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="karamahati@gmail.com">final-project</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <!-- Non-ROS Python deps -->
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <!-- <exec_depend>python3-json</exec_depend>
  <exec_depend>python3-asyncio</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
